Avoid embedding JDK XML catalog resources